--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,11 +1,9 @@
 pipeline {
-  agent {
-    docker { image 'node:16-alpine' }
-  }
+  agent none
   stages {
-    stage('Test') {
+    stage('Hello World') {
       steps {
-        sh 'node --version'
+        sh 'echo "Hello World"'
       }
     }
   }
